--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -14,4 +14,5 @@ jobs:
       with:
         java-version: 1.8
     - name: Build
+      #FIXME make file executable in the repo
       run: chmod +x ./gradlew && ./gradlew build
