--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,4 +1,4 @@
-name: Gradle
+name: Build
 
 on: [push]
 
@@ -13,6 +13,6 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
-    - name: Build
+    - name: Build with Gradle
       #FIXME make file executable in the repo
       run: chmod +x ./gradlew && ./gradlew build
